samples/_failures_safe/1761163219_dc1a0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90d08314.c: In function ‘parser_expect_operator’:
./samples/SAFE/__tmp_90d08314.c:146:36: error: expected declaration or statement at end of input
  146 | void parser_expect_operator(struct Parser *parser, const char *op) {
      |                                    ^~~~~~
